lab2/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: <YOUR_NAMESPACE>
  labels:
    app: lab2
spec:
  selector:
    matchLabels:
      app: lab2
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lab2
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
