lab2/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: <YOUR_NAMESPACE>
  labels:
    app: lab2
spec:
  selector:
    matchLabels:
      app: lab2
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lab2
        tier: frontend
    spec:
      containers:
      - image: wordpress:4.8-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
