lab2/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: <YOUR_NAMESPACE>
  labels:
    app: lab2
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: lab2
    tier: mysql
